# legobot

./: .nxt-python.conf  README.md  pyproject.toml  teleoperate.py  test_bluetooth.py  test_motors.py
